[package]
name = "httpstoreredis"
version = "0.1.0"
authors = ["zwwland <zwwland@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
redis = { version = "0.20.0", features = ["tokio-comp"] }